fix: z-index of BaseLoader missing from variables file

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -96,6 +96,7 @@ $zindex: (
   dropdown: 200,
   uploadbar-content: 200,
   hoverbox: 500,
+  loader: 5000,
   modal_bg: 10000,
   modal: 10020,
 )
